fix: Focus no longer jumps to first SubMenu item if not keyboard navigated. Changed outline focus from red to default

--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -133,7 +133,6 @@
   font-size: 15px;
   font-weight: bold;
   padding: 20px;
-  outline: none;
   margin-top: 20px;
   color: $dark-gray;
   transition: background-color 0.3s, color 0.3s;
