--- a/src/index.scss
+++ b/src/index.scss
@@ -24,13 +24,6 @@ a {
   text-decoration: none;
 }
 
-a:focus {
-  outline: 1px solid red;
-}
-
-button:focus {
-  outline: 1px solid red;
-}
 
 ul{
   padding: 0;
